# FileIndexGUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gui/include/: fstreemodel.h  indexdialog.h  indexthread.h  mainwindow.h  removedialog.h  searchmanager.h  settingsdialog.h  stats.h
gui/src/: indexthread.cpp  main.cpp
gui/src/fstreemodel/: fstreemodel.cpp
gui/src/indexdialog/: indexdialog.cpp
gui/src/mainwindow/: mainwindow.cpp
gui/src/removedialog/: removedialog.cpp  removethread.cpp
gui/src/searchManager/: searchmanager.cpp
gui/src/settingsdialog/: settingsdialog.cpp
gui/ui/: indexdialog.ui  mainwindow.ui  removedialog.ui  settingsdialog.ui
lang/: FileIndexGUI_de_DE.ts  FileIndexGUI_en_US.ts
